# Interpreter

./: .gitignore  AST.x  CMakeLists.txt  Makefile  main.cpp
AST/: AST.cpp  AST.h  ASTnode.h
CST/: CST.cpp  CST.h  node.h
output/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  tokenTest
removeComments/: removeComments.cpp  removeComments.h
symbolTable/: stNode.h  symbolTable.cpp  symbolTable.h
token input/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
tokenize/: token.h  tokenList.cpp  tokenList.h  tokenize.cpp  tokenize.h
